Fixing city map issue where a recently added city cannot be hovered over for a tooltip. Also minor css changes to landing page and set login form to be visible on page load

--- a/src/icons/Icons.scss
+++ b/src/icons/Icons.scss
@@ -3,4 +3,5 @@
     transform: translate(4px, 2px);
     fill: rgb(203, 118, 120);
     z-index: 2001;
+    cursor: pointer;
 }
